@@ -1,0 +1,12 @@
+processor	: 0
+cpu		: POWER4+ (gq)
+clock		: 1452.000000MHz
+revision	: 2.1
+
+processor	: 1
+cpu		: POWER4+ (gq)
+clock		: 1452.000000MHz
+revision	: 2.1
+
+timebase	: 181495442
+machine		: CHRP IBM,7029-6E3
