@@ -1,0 +1,8 @@
+subarch chrp_pseries
+cpuinfo chrp_pseries.cpuinfo
+majors 2.4 2.6
+flavour power4-chrp
+kernel-2.4 2.4.27-power4-chrp
+kernel-2.6 2.6.8-power4
+usable 2.4.27-power4-chrp 2.4.27-power4-chrp-rs6k 2.6.8-power4 2.6.8-power4-smp
+unusable 2.4.27-apus apus 2.4.27-power3-chrp-rs6k 2.4.27-power3-chrp 2.4.27-power3-pmac 2.4.27-power3-prep 2.4.27-power4-pmac 2.4.27-power4-prep 2.4.27-powerpc-chrp-rs6k 2.4.27-powerpc-chrp 2.4.27-powerpc-pmac 2.4.27-powerpc-prep 2.4.27-powerpc-small-chrp-rs6k 2.4.27-powerpc-small-chrp 2.4.27-powerpc-pmac 2.4.27-powerpc-small-prep 2.4.27-powerpc-smp-chrp-rs6k 2.4.27-powerpc-smp-chrp 2.4.27-powerpc-smp-pmac 2.4.27-powerpc-smp-prep 2.6.8-power3 2.6.8-power3-smp 2.6.8-powerpc 2.6.8-powerpc-smp
